# python-examples

./: README.md  main.py  pyproject.toml  runner.py
categories/: chat.py  embedding.py  image.py  multimodal.py  object_detection.py  ocr.py  stt.py  translation.py  tts.py
utils/: chat_hyper_param.py  file_tools.py  model_info_generator.py  render_model_option.py  title_with_btn.py
