[tool.poetry]
name = "streamlit-aibrary"
version = "0.0.1"
description = ""
authors = ["Alireza Morsali <alireza.mors@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
langchain-community = "^0.3.14"
faiss-cpu = "^1.9.0.post1"
markitdown = "^0.0.1a3"
tiktoken = "^0.8.0"
langchain-openai = "^0.3.0"
python-dotenv = "^1.0.1"
aibrary = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"